[gd_scene load_steps=10 format=3 uid="uid://fc1qrw0qrcbo"]

[ext_resource type="Script" path="res://Button.gd" id="1_6ljsi"]
[ext_resource type="Texture2D" uid="uid://g8hebppdgle3" path="res://Images/Player/base-1-1-pixilart.png" id="2_nq7fx"]
[ext_resource type="Script" path="res://SpriteSelect.gd" id="3_r4gqj"]
[ext_resource type="Texture2D" uid="uid://bj4sf16jqpfmr" path="res://Images/Solid_black.svg.png" id="4_t3ppg"]
[ext_resource type="Texture2D" uid="uid://bc8d000idrbnf" path="res://Images/StartScreen/pixilart-drawing (7) copy.png" id="5_35cfk"]
[ext_resource type="Texture2D" uid="uid://dadhikmrfr161" path="res://Images/StartScreen/pixilart-drawing (7).png" id="6_bwtx6"]
[ext_resource type="Texture2D" uid="uid://bst4k5qlf1gys" path="res://Images/StartScreen/custom-3-pixilart copy.png" id="7_mnl3a"]
[ext_resource type="Texture2D" uid="uid://ccc3qdbfcv8mo" path="res://Images/StartScreen/custom-3-pixilart.png" id="8_l8vuj"]

[sub_resource type="LabelSettings" id="LabelSettings_oyvod"]
font_size = 140
font_color = Color(0, 1, 0.0823529, 1)
outline_size = 9

[node name="Start" type="Control"]
layout_mode = 3
anchors_preset = 0

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -1
layout_mode = 0
offset_left = 4888.0
offset_right = 6088.0
offset_bottom = 1200.0
scale = Vector2(-8.24457, 1.73849)
texture = ExtResource("4_t3ppg")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 872.0
offset_top = 41.0
offset_right = 2125.0
offset_bottom = 233.0
text = "Derek's Adventure"
label_settings = SubResource("LabelSettings_oyvod")
horizontal_alignment = 1

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 1315.0
offset_top = 649.0
offset_right = 1673.0
offset_bottom = 763.0
theme_override_font_sizes/font_size = 70
text = "Play"
script = ExtResource("1_6ljsi")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(1482, 1241)
scale = Vector2(10, 10)
texture = ExtResource("2_nq7fx")
script = ExtResource("3_r4gqj")

[node name="RightHair" type="TextureButton" parent="Sprite2D"]
offset_left = 30.0
offset_top = -30.4
offset_right = 70.0
offset_bottom = 9.6
scale = Vector2(0.26, 0.259999)
pivot_offset = Vector2(2.08165e-12, 2.08165e-12)
texture_normal = ExtResource("5_35cfk")
texture_pressed = ExtResource("5_35cfk")
texture_hover = ExtResource("5_35cfk")
texture_disabled = ExtResource("5_35cfk")
texture_focused = ExtResource("5_35cfk")
stretch_mode = 0

[node name="LeftHair" type="TextureButton" parent="Sprite2D"]
offset_left = -25.5
offset_top = -20.0
offset_right = 14.5
offset_bottom = 20.0
rotation = 3.14159
scale = Vector2(0.26, 0.26)
pivot_offset = Vector2(2.08165e-12, 2.08165e-12)
texture_normal = ExtResource("5_35cfk")
texture_pressed = ExtResource("5_35cfk")
texture_hover = ExtResource("5_35cfk")
texture_disabled = ExtResource("5_35cfk")
texture_focused = ExtResource("5_35cfk")
stretch_mode = 0

[node name="RightCostume" type="TextureButton" parent="Sprite2D"]
offset_left = 30.0
offset_top = 22.2
offset_right = 70.0
offset_bottom = 62.2
scale = Vector2(0.26, 0.259999)
pivot_offset = Vector2(2.08165e-12, 2.08165e-12)
texture_normal = ExtResource("5_35cfk")
texture_pressed = ExtResource("5_35cfk")
texture_hover = ExtResource("5_35cfk")
texture_disabled = ExtResource("5_35cfk")
texture_focused = ExtResource("5_35cfk")
stretch_mode = 0

[node name="LeftCostume" type="TextureButton" parent="Sprite2D"]
offset_left = -25.5
offset_top = 31.6
offset_right = 14.5
offset_bottom = 71.6
rotation = 3.14159
scale = Vector2(0.26, 0.26)
pivot_offset = Vector2(2.08165e-12, 2.08165e-12)
texture_normal = ExtResource("5_35cfk")
texture_pressed = ExtResource("5_35cfk")
texture_hover = ExtResource("5_35cfk")
texture_disabled = ExtResource("5_35cfk")
texture_focused = ExtResource("5_35cfk")
stretch_mode = 0

[node name="PlayerBackground" type="Sprite2D" parent="."]
position = Vector2(1490, 1241)
scale = Vector2(4.3227, 3.67673)
texture = ExtResource("6_bwtx6")

[node name="Hair" type="Sprite2D" parent="."]
position = Vector2(1500, 988)
scale = Vector2(4.3227, 3.67673)
texture = ExtResource("7_mnl3a")

[node name="Costume" type="Sprite2D" parent="."]
position = Vector2(1500, 1510)
scale = Vector2(4.3227, 3.67673)
texture = ExtResource("8_l8vuj")

[connection signal="pressed" from="Button" to="Button" method="_on_pressed"]
[connection signal="pressed" from="Sprite2D/RightHair" to="Sprite2D" method="_on_right_hair"]
[connection signal="pressed" from="Sprite2D/LeftHair" to="Sprite2D" method="_on_left_hair"]
[connection signal="pressed" from="Sprite2D/RightCostume" to="Sprite2D" method="_on_right_costume"]
[connection signal="pressed" from="Sprite2D/LeftCostume" to="Sprite2D" method="_on_left_costume"]
